--- a/assets/css/base/animations.css
+++ b/assets/css/base/animations.css
@@ -9,3 +9,17 @@
         opacity: 1;
     }
 }
+
+@keyframes slideIn {
+    from {
+      top: 100%;
+      opacity: 0;
+      transform: translate(-50%, -100%);
+    }
+  
+    to {
+      top: 50%;
+      opacity: 1;
+      transform: translate(-50%, -50%);
+    }
+  }
