--- a/assets/css/elements/footer.css
+++ b/assets/css/elements/footer.css
@@ -2,6 +2,7 @@
 --------------------------------------------------------------- */
 #footer {
     background-color: var(--selago);
+    position: relative;
 }
 
 #footer a:not(.btn) {
